@@ -3,6 +3,9 @@ reprotest (0.7.1) UNRELEASED; urgency=medium
   * Add a --auto-build option to try to determine which specific variations
     cause unreproducibility.
   * Fix varying both umask and user_group at the same time.
+  * Improve error messages in some common scenarios:
+    - giving a source_root or build_command that doesn't exist
+    - using reprotest with default settings after not installing Recommends
 
  -- Ximin Luo <infinity0@debian.org>  Fri, 22 Sep 2017 17:57:31 +0200
 
